--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/index.js",
-    "docker:build": "docker build -t playground/expressdemo:1.0 ."
+    "client": "cd client && yarn start",
+    "docker:build": "docker build -t playground/expressdemo:1.0 .",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apple-auth": "^1.0.6",
     "apple-signin-auth": "^1.3.3",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
