--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "client_id": "com.blkboxweb.blkbox",
   "team_id": "7LLQ236QT2",
-  "redirect_uri": "https://ab57bdd445a8.ngrok.io/appleauth",
+  "redirect_uri": "https://playground-expressjs.herokuapp.com/appleauth",
   "key_id": "3LHM4Y7344",
   "scope": "name email"
 }
